--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <span>
             <a href="home.html">Home</a>
-            <a href="">Routine</a>
+            <a href="routine.html">Routine</a>
         </span>
         <br>
         <select id="target">
