--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
   <head> </head>
   <body>
     <span>
-      <a href="">Routine</a>
+      <a href="routine.html">Routine</a>
       <a href="">Rules</a>
     </span>
   </body>
