--- a/routine.html
+++ b/routine.html
@@ -5,6 +5,7 @@
       th,
       td {
         border: 1px solid black;
+        font-size: 10px;
       }
     </style>
   </head>
@@ -33,12 +34,24 @@
           <td>Wake Up</td>
         </tr>
         <tr>
-          <td>6:30Am-7:00Am</td>
+          <td>6:30Am-7Am</td>
           <td>Morning dos</td>
         </tr>
         <tr>
-          <td>7:00Am-10:00am</td>
+          <td>7:0Am-10:00am</td>
           <td>Study</td>
+        </tr>
+        <tr>
+          <td>10:00am-10:30am</td>
+          <td>Breakfast</td>
+        </tr>
+        <tr>
+          <td>10:30am-8:30pm</td>
+          <td>Work</td>
+        </tr>
+        <tr>
+          <td>8:30pm-9:00pm</td>
+          <td>Work</td>
         </tr>
       </table>
     </div>
