--- a/routine.html
+++ b/routine.html
@@ -55,7 +55,10 @@
         </tr>
       </table>
     </div>
-    <div id="content_2" class="inv"></div>
+    <div id="content_2" class="inv">
+
+      
+    </div>
     <div id="content_3" class="inv"></div>
   </body>
 </html>
